[package]
name = "miniraw"
version = "1.0.6"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[dependencies]
log = { version = "0.4", features = ["std"] }
time = { version = "0.3", default-features = false, features = ["std", "local-offset"] }
windows = { version = "0.32", features = [
    "alloc", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi",
    "Win32_System_Registry"] }

[build-dependencies]
embed-resource = "1"
